src/main/java/datr/edu/parser/DATRParser.java
// Generated from /Users/peter/Documents/git/uni/datr-interpreter/src/main/resources/DATR.g4 by ANTLR 4.5.3
package datr.edu.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DATRParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, COMMENT=2, ATOM=3, VARIABLE=4, NODE=5, NODE_CHAR=6, ATOM_CHAR=7, 
		SYMBOL_CHAR=8, CHAR=9, SINGLE_QUOTE=10, DOUBLE_QUOTE=11, VAR_PREFIX=12, 
		NODE_SEPARATOR=13, COMMENT_SEPARTOR=14, LPAREN=15, RPAREN=16, LPATH=17, 
		RPATH=18, ASSIGN=19, DOT=20, WS=21, NL=22;
	public static final int
		RULE_query = 0, RULE_theory = 1, RULE_sentence = 2, RULE_equation = 3, 
		RULE_lhs = 4, RULE_rhs = 5, RULE_valueExpression = 6, RULE_descriptor = 7, 
		RULE_globalDescriptor = 8, RULE_path = 9, RULE_atom = 10, RULE_variable = 11, 
		RULE_node = 12;
	public static final String[] ruleNames = {
		"query", "theory", "sentence", "equation", "lhs", "rhs", "valueExpression", 
		"descriptor", "globalDescriptor", "path", "atom", "variable", "node"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'\r'", null, null, null, null, null, null, null, null, "'''", "'\"'", 
		"'$'", "':'", "'%'", "'('", "')'", "'<'", "'>'", "'=='", "'.'", null, 
		"'\n'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, "COMMENT", "ATOM", "VARIABLE", "NODE", "NODE_CHAR", "ATOM_CHAR", 
		"SYMBOL_CHAR", "CHAR", "SINGLE_QUOTE", "DOUBLE_QUOTE", "VAR_PREFIX", "NODE_SEPARATOR", 
		"COMMENT_SEPARTOR", "LPAREN", "RPAREN", "LPATH", "RPATH", "ASSIGN", "DOT", 
		"WS", "NL"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DATR.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DATRParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class QueryContext extends ParserRuleContext {
		public NodeContext node() {
			return getRuleContext(NodeContext.class,0);
		}
		public TerminalNode NODE_SEPARATOR() { return getToken(DATRParser.NODE_SEPARATOR, 0); }
		public LhsContext lhs() {
			return getRuleContext(LhsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(DATRParser.EOF, 0); }
		public TerminalNode WS() { return getToken(DATRParser.WS, 0); }
		public QueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DATRListener ) ((DATRListener)listener).enterQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DATRListener ) ((DATRListener)listener).exitQuery(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DATRVisitor ) return ((DATRVisitor<? extends T>)visitor).visitQuery(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QueryContext query() throws RecognitionException {
		QueryContext _localctx = new QueryContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_query);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(26);
			node();
			setState(27);
			match(NODE_SEPARATOR);
			setState(28);
			lhs();
			setState(30);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(29);
				match(WS);
				}
			}

			setState(32);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TheoryContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(DATRParser.EOF, 0); }
		public List<SentenceContext> sentence() {
			return getRuleContexts(SentenceContext.class);
		}
		public SentenceContext sentence(int i) {
			return getRuleContext(SentenceContext.class,i);
		}
		public List<TerminalNode> COMMENT() { return getTokens(DATRParser.COMMENT); }
		public TerminalNode COMMENT(int i) {
			return getToken(DATRParser.COMMENT, i);
		}
		public List<TerminalNode> WS() { return getTokens(DATRParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(DATRParser.WS, i);
		}
		public List<TerminalNode> NL() { return getTokens(DATRParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(DATRParser.NL, i);
		}
		public TheoryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_theory; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DATRListener ) ((DATRListener)listener).enterTheory(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DATRListener ) ((DATRListener)listener).exitTheory(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DATRVisitor ) return ((DATRVisitor<? extends T>)visitor).visitTheory(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TheoryContext theory() throws RecognitionException {
		TheoryContext _localctx = new TheoryContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_theory);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMENT || _la==WS) {
				{
				{
				setState(35);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(34);
					match(WS);
					}
				}

				setState(37);
				match(COMMENT);
				}
				}
				setState(42);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			{
			setState(43);
			sentence();
			setState(55);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NL) {
				{
				{
				setState(48); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(44);
					match(NL);
					setState(46);
					_la = _input.LA(1);
					if (_la==WS) {
						{
						setState(45);
						match(WS);
						}
					}

					}
					}
					setState(50); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==NL );
				setState(52);
				sentence();
				}
				}
				setState(57);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
			setState(58);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentenceContext extends ParserRuleContext {
		public NodeContext node() {
			return getRuleContext(NodeContext.class,0);
		}
		public TerminalNode NODE_SEPARATOR() { return getToken(DATRParser.NODE_SEPARATOR, 0); }
		public TerminalNode DOT() { return getToken(DATRParser.DOT, 0); }
		public List<EquationContext> equation() {
			return getRuleContexts(EquationContext.class);
		}
		public EquationContext equation(int i) {
			return getRuleContext(EquationContext.class,i);
		}
		public List<TerminalNode> COMMENT() { return getTokens(DATRParser.COMMENT); }
		public TerminalNode COMMENT(int i) {
			return getToken(DATRParser.COMMENT, i);
		}
		public List<TerminalNode> NL() { return getTokens(DATRParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(DATRParser.NL, i);
		}
		public List<TerminalNode> WS() { return getTokens(DATRParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(DATRParser.WS, i);
		}
		public SentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DATRListener ) ((DATRListener)listener).enterSentence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DATRListener ) ((DATRListener)listener).exitSentence(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DATRVisitor ) return ((DATRVisitor<? extends T>)visitor).visitSentence(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentenceContext sentence() throws RecognitionException {
		SentenceContext _localctx = new SentenceContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_sentence);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			node();
			setState(61);
			match(NODE_SEPARATOR);
			{
			setState(66);
			_la = _input.LA(1);
			if (_la==NL) {
				{
				setState(62);
				match(NL);
				setState(64);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(63);
					match(WS);
					}
				}

				}
			}

			setState(68);
			equation();
			setState(76);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NL) {
				{
				{
				{
				setState(69);
				match(NL);
				setState(71);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(70);
					match(WS);
					}
				}

				}
				setState(73);
				equation();
				}
				}
				setState(78);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
			setState(79);
			match(DOT);
			setState(86);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMENT || _la==WS) {
				{
				{
				setState(81);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(80);
					match(WS);
					}
				}

				setState(83);
				match(COMMENT);
				}
				}
				setState(88);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EquationContext extends ParserRuleContext {
		public LhsContext lhs() {
			return getRuleContext(LhsContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(DATRParser.ASSIGN, 0); }
		public RhsContext rhs() {
			return getRuleContext(RhsContext.class,0);
		}
		public List<TerminalNode> WS() { return getTokens(DATRParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(DATRParser.WS, i);
		}
		public List<TerminalNode> COMMENT() { return getTokens(DATRParser.COMMENT); }
		public TerminalNode COMMENT(int i) {
			return getToken(DATRParser.COMMENT, i);
		}
		public EquationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_equation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DATRListener ) ((DATRListener)listener).enterEquation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DATRListener ) ((DATRListener)listener).exitEquation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DATRVisitor ) return ((DATRVisitor<? extends T>)visitor).visitEquation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EquationContext equation() throws RecognitionException {
		EquationContext _localctx = new EquationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_equation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			lhs();
			setState(91);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(90);
				match(WS);
				}
			}

			setState(93);
			match(ASSIGN);
			setState(95);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				{
				setState(94);
				match(WS);
				}
				break;
			}
			setState(97);
			rhs();
			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMENT || _la==WS) {
				{
				{
				setState(99);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(98);
					match(WS);
					}
				}

				setState(101);
				match(COMMENT);
				}
				}
				setState(106);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LhsContext extends ParserRuleContext {
		public TerminalNode LPATH() { return getToken(DATRParser.LPATH, 0); }
		public TerminalNode RPATH() { return getToken(DATRParser.RPATH, 0); }
		public List<AtomContext> atom() {
			return getRuleContexts(AtomContext.class);
		}
		public AtomContext atom(int i) {
			return getRuleContext(AtomContext.class,i);
		}
		public List<TerminalNode> WS() { return getTokens(DATRParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(DATRParser.WS, i);
		}
		public LhsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lhs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DATRListener ) ((DATRListener)listener).enterLhs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DATRListener ) ((DATRListener)listener).exitLhs(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DATRVisitor ) return ((DATRVisitor<? extends T>)visitor).visitLhs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LhsContext lhs() throws RecognitionException {
		LhsContext _localctx = new LhsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_lhs);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(LPATH);
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ATOM) | (1L << VARIABLE) | (1L << SINGLE_QUOTE) | (1L << WS))) != 0)) {
				{
				{
				setState(109);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(108);
					match(WS);
					}
				}

				setState(111);
				atom();
				setState(113);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,17,_ctx) ) {
				case 1:
					{
					setState(112);
					match(WS);
					}
					break;
				}
				}
				}
				setState(119);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(120);
			match(RPATH);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RhsContext extends ParserRuleContext {
		public List<ValueExpressionContext> valueExpression() {
			return getRuleContexts(ValueExpressionContext.class);
		}
		public ValueExpressionContext valueExpression(int i) {
			return getRuleContext(ValueExpressionContext.class,i);
		}
		public List<TerminalNode> WS() { return getTokens(DATRParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(DATRParser.WS, i);
		}
		public TerminalNode LPAREN() { return getToken(DATRParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(DATRParser.RPAREN, 0); }
		public RhsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rhs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DATRListener ) ((DATRListener)listener).enterRhs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DATRListener ) ((DATRListener)listener).exitRhs(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DATRVisitor ) return ((DATRVisitor<? extends T>)visitor).visitRhs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RhsContext rhs() throws RecognitionException {
		RhsContext _localctx = new RhsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_rhs);
		int _la;
		try {
			setState(145);
			switch (_input.LA(1)) {
			case COMMENT:
			case ATOM:
			case VARIABLE:
			case NODE:
			case SINGLE_QUOTE:
			case DOUBLE_QUOTE:
			case LPATH:
			case DOT:
			case WS:
			case NL:
				enterOuterAlt(_localctx, 1);
				{
				setState(128);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ATOM) | (1L << VARIABLE) | (1L << NODE) | (1L << SINGLE_QUOTE) | (1L << DOUBLE_QUOTE) | (1L << LPATH))) != 0)) {
					{
					{
					setState(122);
					valueExpression();
					setState(124);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,19,_ctx) ) {
					case 1:
						{
						setState(123);
						match(WS);
						}
						break;
					}
					}
					}
					setState(130);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case LPAREN:
				enterOuterAlt(_localctx, 2);
				{
				setState(131);
				match(LPAREN);
				setState(141);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ATOM) | (1L << VARIABLE) | (1L << NODE) | (1L << SINGLE_QUOTE) | (1L << DOUBLE_QUOTE) | (1L << LPATH) | (1L << WS))) != 0)) {
					{
					{
					setState(133);
					_la = _input.LA(1);
					if (_la==WS) {
						{
						setState(132);
						match(WS);
						}
					}

					setState(135);
					valueExpression();
					setState(137);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,22,_ctx) ) {
					case 1:
						{
						setState(136);
						match(WS);
						}
						break;
					}
					}
					}
					setState(143);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(144);
				match(RPAREN);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValueExpressionContext extends ParserRuleContext {
		public AtomContext atom() {
			return getRuleContext(AtomContext.class,0);
		}
		public DescriptorContext descriptor() {
			return getRuleContext(DescriptorContext.class,0);
		}
		public GlobalDescriptorContext globalDescriptor() {
			return getRuleContext(GlobalDescriptorContext.class,0);
		}
		public ValueExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_valueExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DATRListener ) ((DATRListener)listener).enterValueExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DATRListener ) ((DATRListener)listener).exitValueExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DATRVisitor ) return ((DATRVisitor<? extends T>)visitor).visitValueExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ValueExpressionContext valueExpression() throws RecognitionException {
		ValueExpressionContext _localctx = new ValueExpressionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_valueExpression);
		try {
			setState(150);
			switch (_input.LA(1)) {
			case ATOM:
			case VARIABLE:
			case SINGLE_QUOTE:
				enterOuterAlt(_localctx, 1);
				{
				setState(147);
				atom();
				}
				break;
			case NODE:
			case LPATH:
				enterOuterAlt(_localctx, 2);
				{
				setState(148);
				descriptor();
				}
				break;
			case DOUBLE_QUOTE:
				enterOuterAlt(_localctx, 3);
				{
				setState(149);
				globalDescriptor();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DescriptorContext extends ParserRuleContext {
		public NodeContext node() {
			return getRuleContext(NodeContext.class,0);
		}
		public TerminalNode NODE_SEPARATOR() { return getToken(DATRParser.NODE_SEPARATOR, 0); }
		public PathContext path() {
			return getRuleContext(PathContext.class,0);
		}
		public DescriptorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_descriptor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DATRListener ) ((DATRListener)listener).enterDescriptor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DATRListener ) ((DATRListener)listener).exitDescriptor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DATRVisitor ) return ((DATRVisitor<? extends T>)visitor).visitDescriptor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DescriptorContext descriptor() throws RecognitionException {
		DescriptorContext _localctx = new DescriptorContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_descriptor);
		try {
			setState(158);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,26,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(152);
				node();
				setState(153);
				match(NODE_SEPARATOR);
				setState(154);
				path();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(156);
				node();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(157);
				path();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GlobalDescriptorContext extends ParserRuleContext {
		public Token lquote;
		public Token rquote;
		public DescriptorContext descriptor() {
			return getRuleContext(DescriptorContext.class,0);
		}
		public List<TerminalNode> DOUBLE_QUOTE() { return getTokens(DATRParser.DOUBLE_QUOTE); }
		public TerminalNode DOUBLE_QUOTE(int i) {
			return getToken(DATRParser.DOUBLE_QUOTE, i);
		}
		public GlobalDescriptorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_globalDescriptor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DATRListener ) ((DATRListener)listener).enterGlobalDescriptor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DATRListener ) ((DATRListener)listener).exitGlobalDescriptor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DATRVisitor ) return ((DATRVisitor<? extends T>)visitor).visitGlobalDescriptor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GlobalDescriptorContext globalDescriptor() throws RecognitionException {
		GlobalDescriptorContext _localctx = new GlobalDescriptorContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_globalDescriptor);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			((GlobalDescriptorContext)_localctx).lquote = match(DOUBLE_QUOTE);
			setState(161);
			descriptor();
			setState(162);
			((GlobalDescriptorContext)_localctx).rquote = match(DOUBLE_QUOTE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PathContext extends ParserRuleContext {
		public TerminalNode LPATH() { return getToken(DATRParser.LPATH, 0); }
		public TerminalNode RPATH() { return getToken(DATRParser.RPATH, 0); }
		public List<TerminalNode> WS() { return getTokens(DATRParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(DATRParser.WS, i);
		}
		public List<ValueExpressionContext> valueExpression() {
			return getRuleContexts(ValueExpressionContext.class);
		}
		public ValueExpressionContext valueExpression(int i) {
			return getRuleContext(ValueExpressionContext.class,i);
		}
		public PathContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_path; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DATRListener ) ((DATRListener)listener).enterPath(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DATRListener ) ((DATRListener)listener).exitPath(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DATRVisitor ) return ((DATRVisitor<? extends T>)visitor).visitPath(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PathContext path() throws RecognitionException {
		PathContext _localctx = new PathContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_path);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			match(LPATH);
			setState(166);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,27,_ctx) ) {
			case 1:
				{
				setState(165);
				match(WS);
				}
				break;
			}
			setState(176);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ATOM) | (1L << VARIABLE) | (1L << NODE) | (1L << SINGLE_QUOTE) | (1L << DOUBLE_QUOTE) | (1L << LPATH))) != 0)) {
				{
				setState(168);
				valueExpression();
				setState(173);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,28,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(169);
						match(WS);
						setState(170);
						valueExpression();
						}
						} 
					}
					setState(175);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,28,_ctx);
				}
				}
			}

			setState(179);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(178);
				match(WS);
				}
			}

			setState(181);
			match(RPATH);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
